# autorepy

./: LICENSE  README.md  pyproject.toml
src/autorepy/: dict_repo.py  file_system_repo.py  registry.py  repo.py  repo_object.py  tags.py
tests/: conftest.py  repo_contract_models.py  test_dict_repo.py  test_file_system_repo.py  test_nested_repo_objects.py  test_registry.py  test_repo_contract.py  test_repo_object.py  test_repo_refs.py
